Fixes on overflows.

--- a/pages/home/MobileApp/style.css
+++ b/pages/home/MobileApp/style.css
@@ -2,4 +2,5 @@
 	font-family: "Montserrat", sans-serif;
 	background: #fffaf0;
 	overflow: hidden;
+	height: 100vh;
 }
